[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
tantivy= "=0.22.0"
jieba-rs = "0.6.2"
anyhow = "1.0.36"
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
htmlescape = "0.3.1"
tokio = { version = "0.2", features = ["rt-threaded", "test-util", "macros"] }
log = "0.4"
